// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VProgressLinear.js should render component and match snapshot 1`] = `

<div class="v-progress-linear"
     style="height: 7px;"
>
  <div class="v-progress-linear__background primary"
       style="height: 7px; opacity: 0.3; width: 100%;"
  >
  </div>
  <div class="v-progress-linear__bar">
    <div class="v-progress-linear__bar__determinate primary"
         style="width: 33%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with buffer value and match snapshot 1`] = `

<div class="v-progress-linear"
     style="height: 7px;"
>
  <div class="v-progress-linear__background primary"
       style="height: 7px; opacity: 0.3; width: 80%;"
  >
  </div>
  <div class="v-progress-linear__bar"
       style="width: 80%;"
  >
    <div class="v-progress-linear__bar__determinate primary"
         style="width: 41.25%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with buffer value and match snapshot 2`] = `

<div class="v-progress-linear"
     style="height: 7px;"
>
  <div class="v-progress-linear__background primary"
       style="height: 7px; opacity: 0.3; width: 0%;"
  >
  </div>
  <div class="v-progress-linear__bar"
       style="width: 0%;"
  >
    <div class="v-progress-linear__bar__determinate primary"
         style="width: 0%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with buffer value and value > buffer value and match snapshot 1`] = `

<div class="v-progress-linear"
     style="height: 7px;"
>
  <div class="v-progress-linear__background primary"
       style="height: 7px; opacity: 0.3; width: 80%;"
  >
  </div>
  <div class="v-progress-linear__bar"
       style="width: 80%;"
  >
    <div class="v-progress-linear__bar__determinate primary"
         style="width: 112.5%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with color and background color and match snapshot 1`] = `

<div class="v-progress-linear"
     style="height: 7px;"
>
  <div class="v-progress-linear__background blue"
       style="height: 7px; opacity: 1; width: 100%;"
  >
  </div>
  <div class="v-progress-linear__bar">
    <div class="v-progress-linear__bar__determinate orange"
         style="width: 33%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with color and background color and opacity and match snapshot 1`] = `

<div class="v-progress-linear"
     style="height: 7px;"
>
  <div class="v-progress-linear__background blue"
       style="height: 7px; opacity: 0.5; width: 100%;"
  >
  </div>
  <div class="v-progress-linear__bar">
    <div class="v-progress-linear__bar__determinate orange"
         style="width: 33%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with color and background opacity and match snapshot 1`] = `

<div class="v-progress-linear"
     style="height: 7px;"
>
  <div class="v-progress-linear__background orange"
       style="height: 7px; opacity: 0.5; width: 100%;"
  >
  </div>
  <div class="v-progress-linear__bar">
    <div class="v-progress-linear__bar__determinate orange"
         style="width: 33%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with color and match snapshot 1`] = `

<div class="v-progress-linear"
     style="height: 7px;"
>
  <div class="v-progress-linear__background orange"
       style="height: 7px; opacity: 0.3; width: 100%;"
  >
  </div>
  <div class="v-progress-linear__bar">
    <div class="v-progress-linear__bar__determinate orange"
         style="width: 33%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render inactive component and match snapshot 1`] = `

<div class="v-progress-linear"
     style="height: 7px;"
>
  <div class="v-progress-linear__background primary"
       style="height: 0px; opacity: 0.3; width: 100%;"
  >
  </div>
  <div class="v-progress-linear__bar"
       style="height: 0px;"
  >
    <div class="v-progress-linear__bar__determinate primary"
         style="width: 33%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render indeterminate progress and match snapshot 1`] = `

<div class="v-progress-linear"
     style="height: 7px;"
>
  <div class="v-progress-linear__background primary"
       style="height: 7px; opacity: 0.3; width: 100%;"
  >
  </div>
  <div class="v-progress-linear__bar">
    <div class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active">
      <div class="v-progress-linear__bar__indeterminate long primary">
      </div>
      <div class="v-progress-linear__bar__indeterminate short primary">
      </div>
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render indeterminate progress with query prop and match snapshot 1`] = `

<div class="v-progress-linear"
     style="height: 7px;"
>
  <div class="v-progress-linear__background primary"
       style="height: 7px; opacity: 0.3; width: 100%;"
  >
  </div>
  <div class="v-progress-linear__bar">
    <div class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active">
      <div class="v-progress-linear__bar__indeterminate long primary">
      </div>
      <div class="v-progress-linear__bar__indeterminate short primary">
      </div>
    </div>
  </div>
</div>

`;
